--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,31 @@
 
-.flex-containertext-carousel {
-  display: flex;
-  align-items: center;
-  justify-content: space-between; 
-  width: 50%;
-  
-}
 .flex-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 15%;
-  margin-right: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 0;
+    margin-right: 0;
 }
 body {
     font-size: 28px;
+    font-family: 'Times New Roman', Times, serif;
   }
 img {
-  margin-left: auto;
-  margin-right: auto;
+  width: 50%;
+  height: auto; 
+}
+footer {
+  justify-content: space-between;
+  padding: 3px;
+  background-color: rgb(0, 64, 162);
 }
   ul {
+    text-align: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: rgb(0, 64, 162);
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
   }
@@ -65,9 +64,9 @@ img {
   
   /* Slideshow container */
   .slideshow-container {
-    max-width: 1000px;
+    width: 100%;
     position: relative;
- 
+    max-width: none;
   }
   
   /* Next & previous buttons */
@@ -108,7 +107,7 @@ img {
     text-align: center;
   }
   
-  /* Number text (1/3 etc) */
+  /* Number text */
   .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -117,7 +116,7 @@ img {
     top: 0;
   }
   
-  /* The dots/bullets/indicators */
+  /* The dots */
   .dot {
     cursor: pointer;
     height: 15px;
