--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 0;
-    margin-right: 0;
+    width: 100%;
 }
 body {
     font-size: 28px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "Segoe UI", Arial, sans-serif; 
   }
 img {
-  width: 50%;
+  width: 7%;
   height: auto; 
 }
 footer {
@@ -40,6 +39,7 @@ footer {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    
   }
   
   li a:hover {
@@ -55,6 +55,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     width: 10%;
+    height: 10%;
   }
 
   * {box-sizing: border-box}
@@ -65,11 +66,11 @@ footer {
   /* Slideshow container */
   .slideshow-container {
     width: 100%;
+    height: 700px;
     position: relative;
-    max-width: none;
   }
   
-  /* Next & previous buttons */
+  /* Next and previous buttons */
   .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -85,13 +86,13 @@ footer {
     user-select: none;
   }
   
-  /* Position the "next button" to the right */
+  /* Position the next button to the right */
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
-  /* On hover, add a black background color with a little bit see-through */
+  /* Making hover color black */
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
@@ -138,3 +139,4 @@ footer {
   @media only screen and (max-width: 300px) {
     .prev, .next,.text {font-size: 11px}
   }
+
