--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,9 @@ footer {
   background-color: rgb(0, 64, 162);
 }
   ul {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -66,7 +68,7 @@ footer {
   /* Slideshow container */
   .slideshow-container {
     width: 100%;
-    height: 700px;
+    height: 500px;
     position: relative;
   }
   
