--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ img {
   height: auto; 
 }
 footer {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 3px;
   background-color: rgb(0, 64, 162);
@@ -68,7 +70,7 @@ footer {
   /* Slideshow container */
   .slideshow-container {
     width: 100%;
-    height: 500px;
+    height: 650px;
     position: relative;
   }
   
