--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 body {
-    font-size: 28px;
+    font-size: 25px;
     font-family: "Segoe UI", Arial, sans-serif; 
   }
 img {
@@ -14,8 +14,9 @@ img {
   height: auto; 
 }
 footer {
-  justify-content: space-between;
-  padding: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   background-color: rgb(0, 64, 162);
 }
   ul {
@@ -68,7 +69,7 @@ footer {
   /* Slideshow container */
   .slideshow-container {
     width: 100%;
-    height: 500px;
+    height: 650px;
     position: relative;
   }
   
@@ -142,3 +143,9 @@ footer {
     .prev, .next,.text {font-size: 11px}
   }
 
+.bodyParagraph{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
