--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,9 @@ img {
 footer {
   display: flex;
   align-items: center;
-<<<<<<< HEAD
   justify-content: space-around;
-=======
-  justify-content: space-between;
-  padding: 3px;
->>>>>>> a943fa00b68a14e98e78106992bb3d7f516ee29e
   background-color: rgb(0, 64, 162);
+  color: white;
 }
   ul {
     display: flex;
@@ -153,4 +149,20 @@ footer {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+}
+.footertext {
+  color: #ffffff;
+  text-align: left;
+  font-size: 12pt;
+  font-weight: 500;
+  margin: 0;
+  justify-content: center;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
 }
