--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: rgb(0, 64, 162);
+  background-color: rgb(0, 84, 162);
   color: white;
 }
   ul {
@@ -28,8 +28,7 @@ footer {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgb(0, 64, 162);
-    position: sticky;
+    background-color: rgb(0, 84, 162);
     top: 0;
   }
   
@@ -70,7 +69,7 @@ footer {
   /* Slideshow container */
   .slideshow-container {
     width: 100%;
-    height: 650px;
+    height: 664px;
     position: relative;
   }
   
@@ -101,9 +100,15 @@ footer {
     background-color: rgba(0,0,0,0.8);
   }
   
+  .titleAbout {
+    background-color: #111;
+    text-align: center;
+    color: white;
+  }
+
   /* Caption text */
   .text {
-    color: #f2f2f2;
+    color: #000000;
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
@@ -151,8 +156,7 @@ footer {
     line-height: 1.6;
     text-align: center;
     padding: 10px 20px;
-    background-color: #fff;
-    border: 2px solid #ccc;
+    border: 2px solid rgb(0, 84, 162);
     border-radius: 10px;
   }
   
@@ -169,8 +173,7 @@ footer {
     flex: 1 1 30%;
     min-width: 250px;
     max-width: 350px;
-    background-color: white;
-    border: 2px solid rgb(0, 64, 162);
+    border: 2px solid rgb(0, 84, 162);
     border-radius: 15px;
     padding: 20px;
     box-sizing: border-box;
@@ -182,7 +185,6 @@ footer {
     transform: scale(1.03);
   }
 .footertext {
-  color: #ffffff;
   text-align: left;
   font-size: 12pt;
   font-weight: 500;
@@ -197,3 +199,4 @@ footer {
   padding: 0;
   margin: 0;
 }
+
