--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ footer {
     background-color: #111;
     text-align: center;
     color: white;
+    border: 5px solid #111;
   }
 
   /* Caption text */
@@ -166,20 +167,19 @@ footer {
     justify-content: center;
     gap: 20px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 10px auto;
   }
   
   .info-box {
-    flex: 1 1 30%;
-    min-width: 250px;
-    max-width: 350px;
+    flex: 1 1 auto;
+    min-width: 0;
+    max-width: 500px;
     border: 2px solid rgb(0, 84, 162);
     border-radius: 15px;
     padding: 20px;
     box-sizing: border-box;
     transition: all 0.3s ease;
   }
-  
   .info-box:hover {
     background-color: #f0f0f0;
     transform: scale(1.03);
