--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,50 @@ footer {
   margin: 0;
 }
 
+
+
+
+
+
+
+
+
+
+.image-grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 960px;
+  margin: 0 auto;
+  gap: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.image-item {
+  width: 300px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border: 2px solid rgb(0, 84, 162);
+  border-radius: 15px;
+  padding: 20px;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+}
+.image-item:hover {
+  background-color: #f0f0f0;
+  transform: scale(1.03);
+}
+.image-item img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.image-item p {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #333;
+}
