--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
   padding: 0;
   font-family: "Segoe UI", Arial, sans-serif;
   text-align: center;
+  color: rgb(0, 84, 162);
 }
 
 .flex-container h2 {
