--- a/staff.css
+++ b/staff.css
@@ -5,28 +5,128 @@
     align-items: center; 
     width: 100%;
     padding: 20px 0; 
-}
-.logo {
-    width: 7%; 
+  }
+  
+  
+  .logo {
+    max-width: 100px;
+    width: 10vw;
     height: auto;
-    margin: 0 20px; 
-}
-.flex-container h2, .flex-container h3 {
+  }
+  
+  .flex-container h2, .flex-container h3 {
     margin: 0;
     padding: 0;
     font-family: "Segoe UI", Arial, sans-serif;
     text-align: center;
-}
-.flex-container h2 {
+    color: rgb(0, 84, 162);
+  }
+  
+  .flex-container h2 {
     font-size: 32px;
     margin-right: 10px;
-}
+  }
   
-.flex-container h3 {
+  .flex-container h3 {
     font-size: 24px;
     margin-left: 10px;
-}
-.titlestaff {
+  }
+  
+.navbar {
+    background-color: rgb(0, 84, 162);
+    text-align: center;
+  }
+  
+  .nav-links {
+    display: flex;
+    flex-wrap: wrap; /* allows wrapping on small screens */
+    justify-content: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-links li {
+    margin: 0;
+  }
+  
+  .nav-links li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .nav-links li a:hover {
+    background-color: #111;
+  }
+  
+  .nav-links .active {
+    background-color: red;
+  }
+  
+  /* Optional: Smaller padding on mobile */
+  @media (max-width: 600px) {
+    .nav-links li a {
+      padding: 10px 12px;
+    }
+  }
+  body {
+      font-size: 25px;
+      font-family: "Segoe UI", Arial, sans-serif; 
+    }
+  
+  img {
+    width: 7%;
+    height: auto;
+  }
+  
+  footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: rgb(0, 84, 162);
+    color: white;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+  
+    ul {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: rgb(0, 84, 162);
+      top: 0;
+    }
+    
+    li {
+      float: left;
+    }
+    
+    li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      
+    }
+    
+    li a:hover {
+      background-color: #111;
+    }
+    
+    .active {
+      background-color: red;
+    }
+
+  /* Styling for Staff Title */
+  .titlestaff {
     text-align: center;
     margin: 30px 0;
     font-family: "Segoe UI", Arial, sans-serif;
@@ -40,51 +140,8 @@
     border-bottom: 2px solid rgb(0, 84, 162); /* Underline the title for emphasis */
     padding-bottom: 10px;
   }
-body {
-      font-size: 25px;
-      font-family: "Segoe UI", Arial, sans-serif; 
-}
-img {
-    width: 7%;
-    height: auto; 
-}
-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: rgb(0, 84, 162);
-    color: white;
-}
-ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(0, 84, 162);
-    top: 0;
-    }
-li {
-    float: left;
-}
-    
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-      
-}
-    
-li a:hover {
-    background-color: #111;
-}  
-.active {
-    background-color: red;
-}
+  
+  
 .footertextinfo {
     text-align: left;
     font-size: 12pt;
