--- a/sports.css
+++ b/sports.css
@@ -1,4 +1,3 @@
-
 .flex-container {
   display: flex;
   justify-content: center; 
@@ -30,6 +29,46 @@
 .flex-container h3 {
   font-size: 24px;
   margin-left: 10px;
+}
+.navbar {
+  background-color: rgb(0, 84, 162);
+  text-align: center;
+}
+
+.nav-links {
+  display: flex;
+  flex-wrap: wrap; /* allows wrapping on small screens */
+  justify-content: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-links li {
+  margin: 0;
+}
+
+.nav-links li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.nav-links li a:hover {
+  background-color: #111;
+}
+
+.nav-links .active {
+  background-color: red;
+}
+
+/* Optional: Smaller padding on mobile */
+@media (max-width: 600px) {
+  .nav-links li a {
+    padding: 10px 12px;
+  }
 }
 body {
     font-size: 25px;
